@@ -11,7 +11,7 @@ my @variables = qw(
    script_name install_directory script_url
    custom_lib_path use_plucene indexing_directory enable_page_deletion
    admin_pass stylesheet_url site_name navbar_on_home_page
-   recent_changes_on_home_page home_name
+   recent_changes_on_home_page content_above_navbar_in_html home_name
    site_desc default_city default_country contact_email
    default_language http_charset ping_services
    formatting_rules_node formatting_rules_link backlinks_in_title template_path
@@ -82,6 +82,7 @@ sub _init {
                      site_name => "Unconfigured OpenGuides site",
                      navbar_on_home_page => 1,
                      recent_changes_on_home_page => 1,
+                     content_above_navbar_in_html => 0,
                      home_name => "Home",
                      site_desc => "A default configuration of OpenGuides",
                      default_city => "",
@@ -157,6 +158,7 @@ sub _init {
         site_name => "What's the site called? (should be unique)",
         navbar_on_home_page => "Do you want the navigation bar included on the home page?",
         recent_changes_on_home_page => "Do you want the ten most recent changes included on the home page?",
+        content_above_navbar_in_html => "Do you want the content to appear above the navbar in the HTML?",
         home_name => "What should the home page of the wiki be called?",
         site_desc => "How would you describe the site?",
         default_city => "What city is the site based in?",
@@ -249,6 +251,8 @@ sub script_url {
 =item * navbar_on_home_page (default: true)
 
 =item * recent_changes_on_home_page (default: true)
+
+=item * content_above_navbar_in_html (default: false)
 
 =item * home_name (default: C<Home>)
 
