@@ -18,6 +18,7 @@ http://dev.openguides.org/log/trunk
         Move common categories/locales into navbar.
         Add a new div to wrap the entire body; also, use header.tt in
           home_node.tt instead of copy/paste.
+        Add config option to place content above navbar in HTML.
         Add config option to suppress inline maps on geotagged nodes.
         Fix preferences to take notice of users turning off inline Google maps.
         Fix "Link to this page" on index maps to remember the map type and
